methods.picture.PatternPicture.scala.code
override def run() {
}

def faireTraitRV(c: Color){
  setCouleurBrosse(c)
}

	avance()


def marquerSol(){
	baisseBrosse()
	leveBrosse()